# ATHENA

./: CMakeLists.txt  GEMINI.md  Makefile  Makefile.in  README.md  config.status  patch_ads.py  test_output.txt  test_platform  test_platform.cpp
ATHENA/: CMakeLists.txt  COPYING  INSTALL  README  TEX_FONTS
ATHENA/include/: TeXmacs.h
ATHENA/plugins/: CMakeLists.txt
ATHENA/progs/: init-athena.scm  init-texmacs.scm
ATHENA/styles/: article.ts  beamer.ts  book.ts  browser.ts  generic.ts  letter.ts  poster.ts  seminar.ts  source.ts
misc/: CMakeLists.txt
misc/admin/: admin.makefile  sign_update
misc/doxygen/: Doxyfile
misc/m4/: gnutls.m4  gs.m4  tm_android.m4  tm_subversion.m4  tm_version.m4
misc/scripts/: fig2ps  fig2ps.in  texmacs  texmacs.in  tm_gs
plugins/: CMakeLists.txt
plugins/coq/: CMakeLists.txt
plugins/jupyter/: README.md
plugins/maple/: CMakeLists.txt  Makefile.9
plugins/mathematica/: Makefile.lazy
plugins/maxima/: README.md
plugins/octave/: README.md
plugins/r/: README.md
plugins/sage/: README.md
plugins/shell/: CMakeLists.txt
plugins/tmpy/: protocol.py
src/: CMakeLists.txt  makefile  makefile.in
src/ATHENA/: server.hpp  tm_data.hpp  tm_frame.hpp  tm_server.hpp  tm_window.hpp
src/ATHENA/ATHENA/: athena.cpp
src/ATHENA/Data/: new_buffer.cpp  new_buffer.hpp  new_view.cpp  new_window.cpp  vault.cpp
src/ATHENA/Server/: tm_debug.cpp  tm_server.cpp
src/ATHENA/Window/: tm_frame.cpp  tm_window.cpp
src/Data/Convert/AI/: ai.cpp
src/Data/Convert/Obsidian/: a-ofm.md  aofm_parse_file.cpp  aofm_peg.cpp
src/Data/Convert/Tex/: conservative_fromtex.cpp  fromtex.cpp  fromtex_post.cpp  latex_recover.cpp  parsetex.cpp  tracked_totex.cpp
src/Data/Convert/Texmacs/: fromtm.cpp  upgradetm.cpp
src/Data/Convert/Xml/: parsexml.cpp
src/Data/Document/: new_data.cpp  new_style.cpp
src/Data/Drd/: drd_info.cpp  drd_std.cpp
src/Data/History/: archiver.cpp
src/Data/String/: analyze.cpp  analyze.hpp  converter.cpp
src/Edit/: editor.hpp
src/Edit/Editor/: edit_main.cpp  edit_typeset.cpp
src/Edit/Interface/: edit_footer.cpp  edit_interface.hpp  edit_repaint.cpp
src/Edit/Process/: edit_process.cpp
src/Graphics/Colors/: colors.cpp  colors.hpp
src/Graphics/Fonts/: font.cpp  font.hpp  font_database.cpp  font_select.cpp  translator.cpp  virtual_font.cpp
src/Graphics/Gui/: gui.hpp  message.hpp  widget.cpp
src/Graphics/Pictures/: raster.hpp
src/Graphics/Renderer/: brush.cpp  printer.cpp
src/Kernel/Abstractions/: basic.cpp  basic.hpp  observer.cpp
src/Kernel/Containers/: array.hpp  hashmap.cpp  hashmap.hpp  hashtree.cpp  hashtree.hpp  list.cpp  list.hpp  promise.hpp  rel_hashmap.hpp  unary_function.hpp
src/Kernel/Types/: string.cpp  string.hpp  tree.cpp  tree.hpp  tree_label.hpp
src/Plugins/Android/: android_system.cpp  android_system.hpp
src/Plugins/Bibtex/: bibtex.cpp
src/Plugins/Cairo/: cairo_renderer.cpp
src/Plugins/Cocoa/: aqua_renderer.mm
src/Plugins/Database/: database.hpp
src/Plugins/Freetype/: rubber_stix_font.cpp  tt_file.cpp  tt_tools.cpp  unicode_font.cpp
src/Plugins/Ghostscript/: gs_utilities.cpp
src/Plugins/Gnutls/: gnutls.cpp
src/Plugins/Imlib2/: imlib2.cpp
src/Plugins/Ispell/: ispell.cpp  ispell_exe.cpp
src/Plugins/MacOS/: cg_renderer.cpp  cg_renderer.hpp  mac_utilities.mm
src/Plugins/Metafont/: load_tex.cpp  tex_files.cpp  tex_init.cpp
src/Plugins/Openssl/: openssl.cpp
src/Plugins/Pdf/: pdf_hummus_extract_attachment.cpp  pdf_hummus_renderer.cpp
src/Plugins/Qt/: QTMAbout.cpp  QTMAbout.hpp  QTMApplication.cpp  QTMApplication.hpp  QTMFileDialog.cpp  QTMFileDialog.hpp  QTMIconManager.cpp  QTMIconManager.hpp  QTMMainTabWindow.cpp  QTMMainTabWindow.hpp  QTMMenuHelper.cpp  QTMScrollView.cpp  QTMScrollView.hpp  QTMTreeModel.cpp  QTMVaultChooser.cpp  QTMVaultChooser.hpp  QTMWidget.cpp  QTMWidget.hpp  QTMWindow.cpp  QTMWindow.hpp  moc_QTMAbout.cpp  qt_chooser_widget.cpp  qt_gui.cpp  qt_gui.hpp  qt_menu.cpp  qt_picture.cpp  qt_pipe_link.cpp  qt_renderer.cpp  qt_tm_widget.cpp  qt_tm_widget.hpp  qt_ui_element.cpp  qt_utilities.cpp  qt_window_widget.cpp  qt_window_widget.hpp
src/Plugins/Sqlite3/: sqlite3.cpp
src/Plugins/Unix/: unix_entrypoint.cpp  unix_entrypoint.hpp  unix_system.cpp  unix_system.hpp
src/Plugins/Widkit/Input/: input_widget.cpp
src/Plugins/Widkit/Misc/: color_picker_widget.cpp  file_chooser_widget.cpp  texmacs_widget.cpp
src/Plugins/Windows/: windows32_entrypoint.hpp  windows32_system.cpp  windows32_system.hpp
src/Plugins/Windows64/: windows64_encoding.hpp  windows64_entrypoint.cpp  windows64_entrypoint.hpp  windows64_system.cpp  windows64_system.hpp
src/Plugins/X11/: x_window.cpp
src/Scheme/Glue/: build-auto-doc  build-glue  build-glue-basic.scm  build-glue-server.scm  glue_basic.cpp  glue_server.cpp
src/Scheme/Guile/: guile_tm.cpp
src/Scheme/Scheme/: glue.cpp  object.cpp
src/Scheme/Tiny/: init-scheme-tm.scm  tinyscheme_tm.cpp
src/Style/Evaluate/: evaluate_control.cpp
src/Style/Memorizer/: memorizer.cpp  memorizer.hpp
src/System/: config.h  config.h.cmake  config.in  tm_configure.hpp  tm_configure.hpp.cmake  tm_configure.in
src/System/Boot/: boot.hpp  init_texmacs.cpp  init_upgrade.cpp  preferences.cpp
src/System/Classes/: url.cpp
src/System/Files/: file.cpp  image_files.cpp  make_file.cpp  tm_ostream.cpp  tm_ostream.hpp  web_files.cpp
src/System/Language/: dictionary.cpp  fortran_language.cpp  hyphenate.cpp  prog_language.cpp  scilab_language.cpp
src/System/Link/: dyn_link.cpp
src/System/Misc/: data_cache.cpp  fast_alloc.cpp  fast_alloc.hpp  sys_utils.cpp
src/Texmacs/Data/: vault.cpp  vault.hpp
src/Texmacs/Texmacs/: texmacs.cpp
src/Texmacs/Window/: tm_window.cpp
src/Typeset/Bridge/: bridge.cpp  bridge.hpp  bridge_compound.cpp  bridge_docrange.cpp  bridge_document.cpp
src/Typeset/Concat/: concat_active.cpp  concat_macro.cpp  concater.cpp  concater.hpp
src/Typeset/Env/: env_default.cpp  env_exec.cpp
src/Typeset/Line/: lazy_typeset.cpp  line_breaker.cpp
src/Typeset/Stack/: stacker.cpp
tests/: CMakeLists.txt  README.md
(+402 files in other folders)
